--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "gulp test",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
+  "repository": "https://github.com/omnibus-app/omnibus-backend",
   "dependencies": {
     "bluebird": "^2.2.2",
     "body-parser": "~1.0.0",
