--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
     "express": "~4.0.0",
+    "gulp-jshint": "^1.8.4",
     "jade": "~1.3.0",
+    "jshint-stylish": "^0.4.0",
     "morgan": "~1.0.0",
+    "nyt-congress-node": "omnibus-app/nyt-congress-node",
     "request": "^2.39.0",
-    "static-favicon": "~1.0.0",
-    "nyt-congress-node": "omnibus-app/nyt-congress-node"
+    "static-favicon": "~1.0.0"
   },
   "devDependencies": {
     "chai": "^1.9.1",
@@ -26,6 +28,7 @@
     "gulp": "^3.8.7",
     "gulp-istanbul": "^0.2.1",
     "gulp-mocha": "^0.5.2",
+    "jshint": "^2.5.2",
     "mocha": "^1.21.3",
     "mocha-lcov-reporter": "0.0.1",
     "rewire": "^2.1.0",
