--- a/.jshintrc
+++ b/.jshintrc
@@ -20,11 +20,11 @@
     "strict"        : true,
 
     /* should decide as a team about these */
-    "maxparams"     : false,    // {int} Max number of formal params allowed per function
-    "maxdepth"      : false,    // {int} Max depth of nested blocks (within functions)
-    "maxstatements" : false,    // {int} Max number statements per function
-    "maxcomplexity" : false,    // {int} Max cyclomatic complexity per function
-    "maxlen"        : false,    // {int} Max number of characters per line
+    "maxparams"     : 3,         // {int} Max number of formal params allowed per function
+    "maxdepth"      : 2,         // {int} Max depth of nested blocks (within functions)
+    "maxstatements" : 12,        // {int} Max number statements per function
+    "maxcomplexity" : 6,         // {int} Max cyclomatic complexity per function
+    "maxlen"        : 80,        // {int} Max number of characters per line
 
     "expr"          : true,      // Specifically for mocha tests that don't end with a function call (i.e. '.to.exist;')
     "asi"           : false,
