--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "rewire": "^2.1.0",
     "sinon": "^1.10.3",
     "sinon-chai": "^2.5.0",
-    "static-favicon": "~1.0.0"
+    "static-favicon": "~1.0.0",
+    "sunlight-congress-api": "omnibus-app/sunlight-congress-api"
   },
   "devDependencies": {
     "chai": "^1.9.1",
@@ -43,6 +44,7 @@
     "jshint": "^2.5.2",
     "mocha": "^1.21.3",
     "mocha-lcov-reporter": "0.0.1",
+    "nock": "^0.44.0",
     "rewire": "^2.1.0",
     "sinon": "^1.10.3",
     "sinon-chai": "^2.5.0"
