--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-istanbul": "^0.2.1",
     "gulp-jshint": "^1.8.4",
     "gulp-mocha": "^0.5.2",
+    "hiredis": "^0.1.17",
     "jade": "~1.3.0",
     "jshint-stylish": "^0.4.0",
     "mocha": "^1.21.3",
@@ -28,6 +29,7 @@
     "morgan": "~1.0.0",
     "nock": "^0.44.0",
     "nyt-congress-node": "omnibus-app/nyt-congress-node",
+    "redis": "^0.11.0",
     "request": "^2.39.0",
     "rewire": "^2.1.0",
     "sinon": "^1.10.3",
